<resources>
    <string name="app_name">SpaceMiner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_space">Search Space</string>
    <string name="location_size_duration_price">Location-Size-Duration-Price</string>
    <string name="choose_date">Choose Date</string>
    <string name="no_listing">No Listing for now</string>
    <string name="where">Where</string>
    <string name="space_size">Space Size</string>
    <string name="small">Small (less than 5sqft)</string>
    <string name="medium">Medium (5sqft - 12sqft)</string>
    <string name="large">Large (12sqft - 20sqft)</string>
    <string name="extra_large">Extra Large (more than 20sqft)</string>
    <string name="clear_all">Clear All</string>
    <string name="search">Search</string>

    <string name="browse">Browse</string>
    <string name="favorite">Favorite</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
</resources>