<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tabRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/line_divider"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:id="@+id/btn_browse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_browse"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_explore" />

            <TextView
                android:id="@+id/tv_browse"
                style="@style/normalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_browse"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/browse"
                android:textSize="@dimen/_11ssp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/tv_favorite"
                style="@style/normalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_favorite"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_booking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_booking"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_book" />

            <TextView
                android:id="@+id/tv_booking"
                style="@style/normalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_booking"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/booking"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/tv_profile"
                style="@style/normalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_profile"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>